fix: extended container of main body on home page to remove white space before footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,10 @@ p {
     padding: 0;
 }
 
+body * {
+    box-sizing: content-box;
+}
+
 /*---Menu/Logo*/
 
 .header {
@@ -41,8 +45,8 @@ p {
 @media (min-width: 992px) {
     .logo {
         display: block;
-  margin-left: auto;
-  margin-right: auto;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
@@ -98,7 +102,7 @@ p {
 @media (max-width: 992px) {
     .menu-bar {
         display: none;
-           }
+    }
 }
 
 #menu-item a {
@@ -107,13 +111,12 @@ p {
     font-size: 25px;
     background: #ffe7ab;
     color: #660000;
-     }
+}
 
 /*---Home page*/
 
 .home-body {
     background: #013602;
-    max-height: 100%;
     max-width: 100%;
 }
 
@@ -130,7 +133,7 @@ p {
 }
 
 .theme-pic {
-overflow: hidden;
+    overflow: hidden;
     height: 17vh;
     width: 70vw;
     border: 3px solid #ffe7ab;
@@ -146,17 +149,17 @@ overflow: hidden;
 
 @media (min-width: 992px) {
     .theme-pic {
-    height: 50vh;
-    width: 20vw;
-    border: 3px solid #ffe7ab;
-    border-radius: 15%;
-    margin-top: 80px;
-    margin-bottom: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+        height: 50vh;
+        width: 27vw;
+        border: 3px solid #ffe7ab;
+        border-radius: 15%;
+        margin-top: 40px;
+        margin-bottom: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
     }
 }
 
@@ -172,15 +175,15 @@ overflow: hidden;
 
 @media (min-width: 992px) {
     .home-theme-text {
-    text-transform: uppercase;
-    background-color: #ffe7ab;
-    color: #660000;
-    border: 2px solid #660000;
-    border-radius: 20px;
-    text-align: center;
-    font-weight: 600;
-    margin-top: 20px;
-}
+        text-transform: uppercase;
+        background-color: #ffe7ab;
+        color: #660000;
+        border: 2px solid #660000;
+        border-radius: 20px;
+        text-align: center;
+        font-weight: 600;
+        margin-top: 20px;
+    }
 }
 
 /*---Themed pages*/
@@ -215,17 +218,17 @@ overflow: hidden;
 }
 
 .gallery-link-pics img {
- 
-    clear: both;
-        padding: 0;
-        background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-    }
 
-    .gallery-link {
-        background: #ffe7ab;
-    }
+    clear: both;
+    padding: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.gallery-link {
+    background: #ffe7ab;
+}
 
 /*---Sign-up*/
 
@@ -245,12 +248,13 @@ overflow: hidden;
     font-weight: 600;
 }
 
-@media (min-width: 992px) {#photo {
-    clear: both;
-    line-height: 0;
-    column-count: 4;
-    column-gap: 0px;
-}
+@media (min-width: 992px) {
+    #photo {
+        clear: both;
+        line-height: 0;
+        column-count: 4;
+        column-gap: 0px;
+    }
 }
 
 @media (max-width: 992px) {
